force-app/main/default/objects/NewRolesUsers__c/NewRolesUsers__c.object-meta.xml
<CustomObject>
    <label>New Roles Users</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Roles Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>