force-app/main/default/objects/NewRolesUsers__c/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <formula>TEXT(User__r.SalesDivision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarketSegment</label>
    <type>Text</type>
</CustomField>