force-app/main/default/objects/NewRolesUsers__c/fields/NewRole__c.field-meta.xml
<CustomField>
    <fullName>NewRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Role</label>
    <referenceTo>NewRoles__c</referenceTo>
    <relationshipLabel>New Roles Users</relationshipLabel>
    <relationshipName>New_Roles_Users</relationshipName>
    <type>Lookup</type>
</CustomField>