force-app/main/default/objects/NewRolesUsers__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>CASE(TEXT(User__r.SalesDivision__c),
					&apos;00001&apos;,&apos;AMERICA&apos;,
					&apos;00002&apos;,&apos;MENA&apos;,
					&apos;00004&apos;,&apos;EUROPE&apos;,
					&apos;00006&apos;,&apos;KLW&apos;,
					&apos;00010&apos;,&apos;CIS&apos;,
					&apos;00011&apos;,&apos;UKRAINE&apos;,
					&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>