force-app/main/default/objects/NewRolesUsers__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Roles_Users_User</relationshipName>
    <type>Lookup</type>
</CustomField>